--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.17.2",
     "bookshelf": "^0.10.4",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
