--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "knex": "^0.13.0",
     "passport": "^0.4.0",
     "passport-dropbox-oauth2": "^1.1.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.3.0"
   },
   "devDependencies": {
